--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </div>
 
   <!-- credits -->
-  <!-- <a href="https://github.com/designatory/password-generator" id="github" target="_blank"><i style="margin-right: 5px" class="fab fa-github"></i>Github</a> -->
+  <a href="https://github.com/designatory/password-generator" id="github" target="_blank"><i style="margin-right: 5px" class="fab fa-github"></i>Github</a>
 
 <script src="main.js"></script>
 </body>
